RESOLVED FIXED219880
REGRESSION: apple.com sign-in page footer does not wrap, "Site Map" option renders offscreen.
https://bugs.webkit.org/show_bug.cgi?id=219880
Summary REGRESSION: apple.com sign-in page footer does not wrap, "Site Map" option re...
alan
Reported 2020-12-14 16:13:16 PST
Attachments
Patch (8.11 KB, patch)
2020-12-14 16:23 PST, alan
no flags
alan
Comment 1 2020-12-14 16:23:16 PST
EWS
Comment 2 2020-12-15 07:07:30 PST
Committed r270839: <https://trac.webkit.org/changeset/270839> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416206 [details].
Note You need to log in before you can comment on or make changes to this bug.