REGRESSION: apple.com sign-in page footer does not wrap, "Site Map" option renders offscreen. https://bugs.webkit.org/show_bug.cgi?id=219880 <rdar://problem/72128221>

Reviewed by Antti Koivisto.

Source/WebCore:

Do not check the inline-block's style for wrapping. It's the parent's style that drives the content wrapping.

E.g. <div style="white-space: nowrap">some text<div style="display: inline-block; white-space: pre-wrap"></div></div>.
While the inline-block has pre-wrap which allows wrapping, the content lives in a nowrap context.

Test: fast/inline/inline-block-no-wrap.html

* layout/inlineformatting/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::lastContentRunIndex): Deleted.
(WebCore::Layout::InlineContentBreaker::isContentWrappingAllowed const): Deleted.
* layout/inlineformatting/InlineContentBreaker.h:

LayoutTests:

* fast/inline/inline-block-no-wrap-expected.html: Added.
* fast/inline/inline-block-no-wrap.html: Added.


Canonical link: https://commits.webkit.org/https://commits.webkit.org/232480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270839 268f45cc-cd09-0410-ab3c-d52691b4dbfc